<resources>
    <string name="app_name">TicketXpress™</string>

    <string name="login_slogan">TicketXpress™</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>
    <string name="change_profile">Update Profile / Settings</string>
    <string name="update">Update</string>
    <string name="close">Close</string>
    <string name="full_name">Full Name</string>
    <string name="add_item_to_cart">Add item to cart</string>
    <string name="total_price">Total Price: </string>
</resources>
