<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_fragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/settings_icon"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/txtv_profile_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/settings_profile_image"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtv_profile_change"
        android:hint="@string/full_name"
        android:layout_margin="15dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_full_name"
        android:hint="Address"
        android:layout_margin="15dp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/close_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/update_account_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>